# cpp-cmake-template

./: CMakeLists.txt  CMakePresets.json  clean_all.cmake
src/: main.cpp
